apps/n8n/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #TODO: hide the ip like I do for secrets (or ?
    external-dns.alpha.kubernetes.io/target: "90.129.244.3"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n-qa.lab.aminrj.com
      secretName: n8n-tls
  rules:
    - host: n8n-qa.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
